k3s/overlays/_template/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${ENV}-gateway
  namespace: ${ENV}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      hostname: "*.${DOMAIN}"
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: zagoapps-com-tls
    - name: websecure-apex
      hostname: "${DOMAIN}"
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: zagoapps-com-apex-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure-int
      hostname: "*.int.${DOMAIN}"
      port: 9443 # must match the Traefik entrypoint port
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: int-zagoapps-com-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access/internal: "true"
